# chat_gpt_assisstant

./: .gitignore  launch.py  pyproject.toml
app/: app.py  config.py
app/model/: db_models.py  introduce.py  lm_models.py  participants.py
docs/: assistant.csv  db_connect.json  key.txt  promts.json
main/: main.py
tests/: users_test.py
